Closed Bug 1878047 Opened 8 months ago Closed 6 months ago

Deleting collapsed group in Grouped By Sort view doesn't update the message list correctly.

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 115
defect

Tracking

(thunderbird_esr115? affected)

RESOLVED FIXED
127 Branch
Tracking Status
thunderbird_esr115 ? affected

People

(Reporter: mozilla.org, Assigned: welpy-cw)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/115.0

Steps to reproduce:

Use case: cleaning an email account with lots of unsolicited emails (not spam, just offers/news from regular websites).

  1. In view, select "sort by correspondent" then "group by sort"
  2. In the messages list (inbox), messages are grouped by correspondent (expected)
  3. click on one group, then press 'delete'

Actual results:

  1. the group of messages remains shown, the list is not updated
  2. if a cursor (up,down) is pressed to go to the next group, then the group that was deleted disappears, all items are moved up/down one position, and thus the newly selected group is not the one chosen by the user.

Expected results:

  1. the group of messages that was deleted is removed from the list, the cursor goes automatically to the next group in the list.

Additional info: in some cases, navigating erratically with the up/down cursor (e.g., delete a group, move downwards, move upwards, move downwards, click delete again) with even delete the wrong message group -> the list of messages displayed is not trustworthy and can lead to message deleted unintentionally by the user.

Is this in a unified folder?

Does this still happen in version 115.9?

Flags: needinfo?(mozilla.org)

(In reply to Hartmut Welpmann [:welpy-cw] from comment #3)

Does this still happen in version 115.9?

Hi Hartmut, thank you for your reply.
I tested today with version 115.10.1, bug is still present.

Flags: needinfo?(mozilla.org)
Severity: -- → S3
Status: UNCONFIRMED → NEW
Component: Untriaged → Folder and Message Lists
Ever confirmed: true
Summary: Deleting grouped entries in sorted list does not update list of emails → Deleting collapsed group in Grouped By Sort view doesn't update the message list correctly.

When deleting a collapsed group in a view that is grouped by sort, it is necessary to prevent the
front-end from being notified twice to remove that row.

Assignee: nobody → h.w.forms
Status: NEW → ASSIGNED
Target Milestone: --- → 127 Branch

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/6474b8779f53
Fix notifying the front-end when deleting a collapsed group. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 6 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: