Bug 1878047 - Fix notifying the front-end when deleting a collapsed group. r=mkmelin

When deleting a collapsed group in a view that is grouped by sort, it is necessary to prevent the
front-end from being notified twice to remove that row.

Differential Revision: https://phabricator.services.mozilla.com/D208067

--HG--
extra : amend_source : 40b0eb24caadca6eb59a971500e860f40be7b2a6